templates/hawk_template.yaml
---
# Source: hawk/templates/grafana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hawk-grafana"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: "release-name-hawk-grafana"
---
# Source: hawk/templates/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hawk-monitor"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: "release-name-hawk-monitor"
---
# Source: hawk/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hawk-postgres"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
      protocol: TCP
      name: http
  selector:
    app: "release-name-hawk-postgres"
---
# Source: hawk/templates/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hawk-service"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: "release-name-hawk-service"
---
# Source: hawk/templates/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-hawk-grafana"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "release-name-hawk-grafana"
  template:
    metadata:
      labels:
        app: "release-name-hawk-grafana"
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: release-name-hawk
      securityContext:
        fsGroup: 472
        runAsUser: 472
        supplementalGroups:
        - 0
      containers:
        - name: "release-name-hawk-grafana"
          securityContext:
            {}
          image: "grafana/grafana:8.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: release-name-hawk-grafana-datasources
              readOnly: false
            - mountPath: /var/lib/grafana/dashboards/Hawk
              name: release-name-hawk-grafana-dashboards
              readOnly: false
            - mountPath: /etc/grafana/provisioning/dashboards
              name: release-name-hawk-grafana-providers
            - mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
              name: release-name-hawk-grafana-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: release-name-hawk-grafana-config
          configMap:
              defaultMode: 420
              name: release-name-hawk-grafana-config
        - name: release-name-hawk-grafana-datasources
          configMap:
              defaultMode: 420
              name: release-name-hawk-grafana-datasource
        - name: release-name-hawk-grafana-dashboards
          configMap:
              defaultMode: 420
              name: release-name-hawk-grafana-dashboards
        - name: release-name-hawk-grafana-providers
          configMap:
              defaultMode: 420
              name: release-name-hawk-grafana-providers
---
# Source: hawk/templates/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-hawk-monitor"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "release-name-hawk-monitor"
  template:
    metadata:
      labels:
        app: "release-name-hawk-monitor"
    spec:
      serviceAccountName: release-name-hawk
      securityContext:
        {}
      containers:
        - name: hawk
          securityContext:
            {}
          image: "ghcr.io/privacyengineering/hawk-monitor:master"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: hawk/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-hawk-postgres"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 
  selector:
    matchLabels:
      app: "release-name-hawk-postgres"
  template:
    metadata:
      labels:
        app: "release-name-hawk-postgres"
    spec:
      serviceAccountName: release-name-hawk
      securityContext:
        {}
      containers:
        - name: "release-name-hawk-postgres"
          securityContext:
            {}
          image: "postgres:16.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          resources:
            {}
---
# Source: hawk/templates/service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-hawk-service"
  labels:
    helm.sh/chart: hawk-1.1.5
    app.kubernetes.io/name: hawk
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "release-name-hawk-service"
  template:
    metadata:
      labels:
        app: "release-name-hawk-service"
    spec:
      serviceAccountName: release-name-hawk
      securityContext:
        {}
      containers:
        - name: "release-name-hawk-service"
          securityContext:
            {}
          image: "ghcr.io/privacyengineering/hawk-service:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: hawk/templates/hawk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "hawk.example.com"
    http:
      paths:
      
      - pathType: ImplementationSpecific
        path: "/api/*"
        backend:
          service:
            name: release-name-hawk-service
            port:
              number: 80
      
      - pathType: ImplementationSpecific
        path: "/webjars/*"
        backend:
          service:
            name: release-name-hawk-service
            port:
              number: 80
      
      - pathType: ImplementationSpecific
        path: "/v3/*"
        backend:
          service:
            name: release-name-hawk-service
            port:
              number: 80
      
      - pathType: ImplementationSpecific
        path: "/swagger-ui.html"
        backend:
          service:
            name: release-name-hawk-service
            port:
              number: 80
      
      - pathType: ImplementationSpecific
        path: /grafana/*
        backend:
          service:
            name: release-name-hawk-grafana
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: release-name-hawk-monitor
            port:
              number: 80
